<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_documents"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/string_documents" />
    <item
        android:id="@+id/nav_images"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/string_images" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/string_messages" />
    <item
        android:id="@+id/nav_information"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/string_information"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
