<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_index"
            android:scaleType="fitCenter" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:text="@string/strings_index"
            android:textSize="18sp"
            android:textColor="#ffffffff"
            android:gravity="bottom"
            android:textAlignment="center"/> >
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@drawable/ic_divider"
        android:showDividers="middle"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/ic_divider"
            android:showDividers="middle"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_documents"
                    android:background="#00000000"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_file"
                    android:text="@string/string_documents" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textAlignment="center"
                    android:text="@string/string_documents"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_category"
                    android:background="#00000000"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_category" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textAlignment="center"
                    android:text="@string/strings_category"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/ic_divider"
            android:showDividers="middle"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_information"
                    android:background="#00000000"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_phone"
                    android:text="@string/string_information" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textAlignment="center"
                    android:text="@string/string_information"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_messages"
                    android:background="#00000000"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_sms"
                    android:scaleType="fitCenter"
                    android:text="@string/string_messages" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textAlignment="center"
                    android:text="@string/string_messages"/>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>